<resources>
    <string name="app_name">EHL</string>

    <!--

        <string name="ip_connection">192.168.100.2:3000</string>
            -->


    <string name="ip_connection">peaceful-cliffs-36277.herokuapp.com</string>
    <string-array name="gruposlocal">
        <item>Grupo 1</item>
        <item>Grupo 2</item>

    </string-array>


    <string name="txt_Alumno">Alumno</string>
    <string name="txtv_Maestro">Maestro</string>
    <string name="txtv_maestroA">Maestro</string>
    <string name="txtv_maestroB">Maestro</string>
    <string name="txtv_maestroT">Maestro</string>
    <string name="txtv_maestroM">Maestro</string>
    <string name="txtv_maestroC">Maestro</string>
    <string name="txtv_maestroEC">Maestro</string>
    <string name="txtv_AñadirAlumno">Añadir Alumno</string>
    <string name="txtv_Alumnos">/ Alumnos</string>
    <string name="txtv_boleta">/ Boleta</string>
    <string name="txtv_actividadM"> Actividad/ Crear memorama</string>
    <string name="txtv_actividadC"> Actividad/ Crear CQuiz</string>
    <string name="txtv_actividadEC"> Actividad/ Editar CQuiz</string>
    <string name="txtv_trabajos">/ Trabajos</string>
    <string name="txtv_AñadirM">Añadir</string>
    <string name="txtv_AñadirC">Añadir</string>
    <string name="txtv_añadirNP">Añadir nuevo par</string>
    <string name="txtv_añadirNPR">Añadir nueva pregunta</string>
    <string name="txtv_añadirNPRE">Añadir nueva pregunta</string>
    <string name="btn_alumnos">Alumnos</string>
    <string name="btn_trabajos">Trabajos</string>
    <string name="btn_ajustes">Ajustes</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="asistencias">Asistencias</string>
    <string name="nivel_de_conocimiento">Nivel de conocimiento</string>
    <string name="control_parental">Control parental</string>
    <string name="textTitle">Añadir alumno</string>
    <string name="textTitleCambiarContraseña">Cambiar contraseña</string>
    <string name="textViewAñadirAlumno">Ingresar nombre del alumno:</string>
    <string name="textViewIngresarContraseña">Ingresar contraseña:</string>
    <string name="textViewIngresarNuevaContraseña">Ingresar nueva contraseña:</string>
    <string name="textViewIngresarConfirmarNuevaContraseña">Confirmar nueva contraseña:</string>
    <string name="textViewAñadirApPaterno">Ingresar contraseña:</string>
    <string name="textViewAñadirApMaterno">Ingresar apellido materno del alumno:</string>
    <string name="textViewAñadirGrupoAlumno">Ingresar grupo alumno:</string>
    <string name="agregarAlumnoButton">Agregar</string>
    <string name="textButtonHecho">Hecho</string>
    <string name="textTitleContacto">Contacto: </string>
    <string name="textViewCorreoGmail">ayudaEHL@gmail.com</string>
    <string name="textViewCorreoSec">hola@newsec.tech</string>
    <string name="textTitleCambiarContraseñaAlumno">Cambiar contraseña</string>
    <string name="textViewIngresarContraseñaAlumno">Ingresar contraseña actual:</string>
    <string name="textViewIngresarNuevaContraseñaAlumno">Ingresar nueva contraseña:</string>
    <string name="textViewIngresarConfirmarNuevaContraseñaAlumno">Confirmar nueva contraseña:</string>
    <string name="textViewSacarFoto">Sacar una foto</string>
    <string name="textViewAdjuntarArchivo">Adjuntar archivo</string>
    <string name="textTitleAñadirPregunta">Añadir pregunta a CQuiz</string>
    <string name="textViewIngresaNuevaPregunta">Ingresa nueva pregunta</string>
    <string name="textViewIngresaRespuesta">Ingresa la respuesta</string>
    <string name="textButtonAñadir">Añadir pregunta</string>
</resources>