<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#83FFFFFF"
    android:gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9EF8EDED"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="10dp"
                android:text="@string/textTitle"
                android:textColor="#050505"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewAñadirAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAñadirAlumno"
                android:textColor="#050505"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#050505" />

            <TextView
                android:id="@+id/textViewAñadirApPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAñadirApPaterno"
                android:textColor="#050505"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#050505" />

            <TextView
                android:id="@+id/textViewAñadirApMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAñadirApMaterno"
                android:textColor="#050505"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#050505" />

            <TextView
                android:id="@+id/textViewAñadirGrupoAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAñadirGrupoAlumno"
                android:textColor="#050505"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#050505" />

            <Button
                android:id="@+id/messageButton"
                style="@style/btn_sinrelleno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textButton"
                android:textColor="#050505" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>