<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Profesor.activity_main_maestro_trabajos">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/arrow2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtv_maestroT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/txtv_maestroT"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/txtv_trabajos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtv_trabajos"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtv_maestroT" />

    <TextView
        android:id="@+id/txtv_AñadirM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="225dp"
        android:layout_marginTop="173dp"
        android:text="@string/txtv_AñadirM"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtv_AñadirC"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtv_AñadirC"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtv_AñadirM"
        app:layout_constraintTop_toBottomOf="@+id/rvPadre" />

    <ImageView
        android:id="@+id/btnAddMemorama"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/txtv_AñadirM"
        app:layout_constraintTop_toTopOf="@+id/txtv_AñadirM"
        app:srcCompat="@drawable/add_blue_ehl" />

    <ImageView
        android:id="@+id/btnAddCQuiz"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/txtv_AñadirC"
        app:layout_constraintTop_toTopOf="@+id/txtv_AñadirC"
        app:srcCompat="@drawable/add_blue_ehl" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPadre"
        android:layout_width="360dp"
        android:layout_height="186dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtv_AñadirM"
        tools:listitem="@layout/adapter_activity_maestro_trabajos">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPadre2"
        android:layout_width="364dp"
        android:layout_height="214dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@+id/rvPadre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rvPadre"
        app:layout_constraintTop_toBottomOf="@+id/txtv_AñadirC"
        tools:listitem="@layout/adapter_activity_maestro_trabajos">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>